fix overflow content

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,17 @@ html, body{height:100%;}
   min-height:100%;
 }
 * html #outer{height:100%;} /* for IE 6, if you care */
+
 body, p { margin:0; padding:0}
+
+.inner {
+  word-break: break-all;
+}
+
+.inner pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
